# vertex

./: Cargo.toml  index.html  index.js  style.css
puzzles/: 1.txt  2.txt  3.txt
src/: lib.rs
src/display/: error.rs  graphics.rs  mod.rs  shader.rs
src/display/shaders/: line-vertex.glsl  point-fragment.glsl  point-vertex.glsl  triangle-fragment.glsl  triangle-vertex.glsl
src/events/: mod.rs
src/geometry/: mod.rs
src/puzzle_state/: mod.rs
svg_to_puzzle/: Cargo.toml
svg_to_puzzle/src/: main.rs
