[package]
name = "vertex"
version = "0.1.0"
authors = ["ianhoffman <ijh6@cornell.edu>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
quick-error = "1.2.0"
wasm-bindgen = "0.2.56"
js-sys = "0.3.33"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCanvasElement',
  'Node',
  'Window',
  'console',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
]